# CString

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: Cstring.cpp.C3756513A1B43921.idx  Cstring.cpp.EDA1695B7026FB2F.idx  Cstring.h.D05B2F42C5683E9C.idx  main.cpp.7275DB5D5BD7AF64.idx  main.cpp.EB438F0289E07285.idx
src/: CMakeLists.txt  main.cpp
src/include/: Cstring.h
src/lib/: Cstring.cpp
strings/: CMakeLists.txt  Cstring.cpp  Cstring.h
